--- a/ui/index.html
+++ b/ui/index.html
@@ -11,8 +11,8 @@
         <div class="center text-big bold">
             Hi! I am vivek,and I am going to make it.
             <h4>A new heading</h4>
-            I've made some new changes locally.
-            luffy zoro sanji nami ussop robin chopper franky brook
+            <p>I've made some new changes locally.</p>
+            <p></p>luffy zoro sanji nami ussop robin chopper franky brook</p>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
