--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             Hi! I am vivek,and I am going to make it.
             <h4>A new heading</h4>
             <p>I've made some new changes locally.</p>
-            <p></p>luffy zoro sanji nami ussop robin chopper franky brook</p>
+            <p>luffy zoro sanji nami ussop robin chopper franky brook</p>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
