--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,7 @@
             Hi! I am vivek,and I am going to make it.
             <a href="imad.hasura.io">google</a>
             <h4>A new heading</h4>
+            <img src="http://weknowmemes.com/generator/uploads/generated/g1424669948361816040.jpg" />
             <p>I've made some new changes locally.</p>
             <p>luffy zoro sanji nami ussop robin chopper franky brook</p>
         </div>
