--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             Hi! I am vivek,and I am going to make it.
             <a href="imad.hasura.io">google</a>
             <h4>A new heading</h4>
-            <img src="http://4.bp.blogspot.com/-3YaLFji6bCs/UxWiBsqFGJI/AAAAAAAAABA/cvN-JxZUrnQ/s1600/ee590246dd7aef8318a355de12a70d80-d56tmy9.png" />
+            <img src="https://i.ytimg.com/vi/UJ-rsoRJxPE/hqdefault.jpg" />
             <p>I've made some new changes locally.</p>
             <p>luffy zoro sanji nami ussop robin chopper franky brook</p>
         </div>
