[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,13 @@
             <h4>A new heading</h4>
             <img src="https://i.ytimg.com/vi/UJ-rsoRJxPE/hqdefault.jpg" />
             <p>I've made some new changes locally.</p>
-            <p>luffy zoro sanji nami ussop robin chopper franky brook</p>
+            <p>
+            <ol>
+            <li>luffy</li>
+            <li>zoro nami ussop</li>
+            <li>sanji chopper robin</li>
+            <li>franky brook</li>
+            </ol>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
